# coding-jam

./: .gitignore  README.md
archive/inner-canvas/: README.md  ux_redesign_plan.md
avatar-studio/: README.md
avatar-studio/frontend/: app.js
bulletproof/: README.md
bulletproof/backend/: main.py  pyproject.toml
bulletproof/frontend/: app.js  style.css
character-chat/: README.md
character-chat/backend/: models.py  prompts.py  pyproject.toml
character-chat/frontend/: app.js
fridge-chef/: README.md
glow-up/frontend/: style.css
inner-canvas/frontend/: index.html
moodjar/: README.md
my-corner/backend/: main.py
my-corner/frontend/: app.js  index.html  style.css
track-1-glow-up/: README.md
track-1-glow-up/backend/: pyproject.toml
track-1-glow-up/frontend/: app.js  index.html
track-2-avatar-studio/: README.md
track-2-avatar-studio/backend/: pyproject.toml
track-2-avatar-studio/backend/app/: config.py
track-2-avatar-studio/frontend/: index.html  style.css
track-3-year-in-poetry/: README.md
track-3-year-in-poetry/backend/: main.py
track-3-year-in-poetry/frontend/: app.js  index.html
track-4-fridge-chef/: README.md
track-4-fridge-chef/backend/: pyproject.toml
track-4-fridge-chef/frontend/: index.html
track-5-moodjar/: .gitignore  README.md
track-6-inner-canvas/backend/: pyproject.toml
track-6-my-corner/: README.md
track-6-my-corner/backend/: pyproject.toml
track-7-bulletproof/: README.md
track-7-bulletproof/backend/: prompts.py
track-8-character-chat/: README.md
year-in-poetry/: README.md  STYLE_GUIDE.md
(+34 files in other folders)
